test/files/neg/t8177a.check
t8177a.scala:5: error: type mismatch;
 found   : A{type Result = Int}
 required: A{type Result = String}
             : A { type Result = String} = x
                                           ^
one error found
